--- a/JobConnect_API/appsettings.json
+++ b/JobConnect_API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=job_connect_db;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  }
+
 }
